# trollimage

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  MANIFEST.in  README.md  README.rst  RELEASING.md  appveyor.yml  changelog.rst  load_colorbrewer_colormaps.py  pyproject.toml  rtd_requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  deploy.yaml
continuous_integration/: environment.yaml
doc/: Makefile  colormap.rst  colorspaces.rst  conf.py  image.rst  index.rst  installation.rst  trollimage_colormap.py  xrimage.rst
doc/examples/: hrv.rgb  setvak.rgb  utilities-examples.py
trollimage/: __init__.py  _colorspaces.pyx  _rgb2hcl.pyx  _xrimage_rasterio.py  colormap.py  colorspaces.py  image.py  test_image.py  utilities.py  version.py  xrimage.py
trollimage/tests/: __init__.py  test_colormap.py  test_image.py  test_xrimage.py  utils.py
