[build-system]
requires = [
    "wheel",
    "numpy>=2.0.0,<3.0",
    "setuptools>=42",
    "versioneer[toml]",
    "Cython>=3.1.0"
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
relative_files = true
plugins = ["Cython.Coverage"]
omit = ["trollimage/version.py", "versioneer.py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::rasterio.errors.NotGeoreferencedWarning",
    # remove when fixed by xarray
    "ignore:__array_wrap__ must accept context and return_scalar arguments:DeprecationWarning:numpy",
    # dateutil needs a new release
    # https://github.com/dateutil/dateutil/issues/1314
    'ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated and scheduled for removal:DeprecationWarning:dateutil',
    # updates incoming in pillow that remove this warning for our use cases
    # https://github.com/python-pillow/Pillow/pull/9063
    "ignore:'mode' parameter is deprecated",
    # dask deprecated the map_blocks token= kwarg but it is being reverted
    "ignore:The `token=` keyword to `map_blocks` has been moved to:FutureWarning",
]
log_cli_level = "info"
testpaths = [
    "trollimage/tests",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "trollimage/version.py"
versionfile_build = "trollimage/version.py"
tag_prefix = "v"
